== 1.3.0 / ??

* N major enhancements:

  * Added darcs support. (Brian Palmer)
  * Added merb support. (Jamie Macey)
  * remote_task now supports arguments and supplies task like rake
    0.8. (Daniel P. Kionka)

* N minor enhancements:

  * Added #role toplevel method, similar to #namespace.
  * Mercurial now automatically initializes the repository. (Jamie Macey)
  * Basic passenger support. (Alan Harper)
  * Split shared symlink creation to a separate task. (Steve Purcell)
  * remote_task :role now allows an empty list of hosts. (Daniel P. Kionka)
  * Switched to ThreadGroup in Action#execute to clean up threads better.
  * git archive now specifically specifies tar format. (knaveofdiamonds)

* N bug fixes:

  * SSH flags are now an Array for proper inclusion in the command.
    (Guillaume Pierronnet)
  * Fixed tempfile dependency in #put if you don't load lighttpd or perforce
    (yipstar)

== 1.1.1 / 2008-01-14

* 5 major enhancements:
  * Support for Rake 0.8. Should still work for Rake 0.7.
  * Added git support (contributed by Garry Dolley).
    * Reviewed for accuracy by Evan Phoenix.
  * Added lighttpd.rb
  * Added automatic client setup for perforce.
  * Added mercurial SCM support patch. Closes ticket 13475.
* 6 minor enhancements:
  * Added #put method that wraps up Tempfile/rsync pattern.
  * Added automatic p4 client setup for perforce.
  * Added vladdemo.sh
  * Moved everything over to put.
  * Moved generic app setup to core from mongrel.
  * Parameterized 'head' into 'revision' variable (with head as default).
* 1 bug fix
  * Fixed cleanup to actually properly clean up.

== 1.1.0 / 2007-09-12

* 3 major enhancements:
  * Vlad.load now takes a hash of recipe overrides, eg: Vlad.load :web => :nginx.
    See rdoc for defaults.
  * Removed vlad_tasks.rb and split into vlad/apache.rb, vlad/mongrel.rb,
    and vlad/core.rb.
  * The flog ratio between capistrano+deps / vlad+deps is pi (or, damn close)!
* 12 minor enhancements: